<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/stop_recording_button"
        style="@style/bottom_button"
        android:backgroundTint="@color/red"
        android:text="@string/stop_recording"
        android:textColor="@color/light_yellow" />


    <TextView
        android:layout_marginTop="10dp"
        android:layout_marginBottom="2dp"
        android:textSize="25sp"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="00:15:56"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/stop_recording_button"
        android:layout_below="@id/timer"
        android:orientation="vertical">


        <LinearLayout style="@style/button_row">

            <Button
                style="@style/annotation_button"
                android:text="@string/hard_acceleration"
                android:id="@+id/acceleration"/>

            <Button
                style="@style/annotation_button"
                android:text="@string/lane_change"
                android:id="@+id/lane_change"/>

        </LinearLayout>


        <LinearLayout style="@style/button_row">

            <Button
                style="@style/annotation_button"
                android:text="@string/bump"
                android:id="@+id/bump"/>

            <Button
                style="@style/annotation_button"
                android:text="@string/hard_break"
                android:id="@+id/hard_break"/>

        </LinearLayout>


        <LinearLayout style="@style/button_row">

            <Button
                style="@style/annotation_button"
                android:text="@string/turn_left"
                android:id="@+id/left_turn"/>

            <Button
                style="@style/annotation_button"
                android:text="@string/turn_right"
                android:id="@+id/right_turn"
                />

        </LinearLayout>


        <LinearLayout style="@style/button_row">

            <ToggleButton
                style="@style/annotation_toggle_button"
                android:textOn="@string/red_light"
                android:textOff="@string/red_light"
                android:id="@+id/red_light"
                />

            <ToggleButton
                style="@style/annotation_toggle_button"
                android:textOff="@string/public_transport"
                android:textOn="@string/public_transport"
                android:id="@+id/public_transport"/>

        </LinearLayout>


        <LinearLayout style="@style/button_row">

            <ToggleButton
                style="@style/annotation_toggle_button"
                android:textOn="@string/slow_traffic"
                android:textOff="@string/slow_traffic"
                android:id="@+id/slow_traffic"
                />

            <ToggleButton
                style="@style/annotation_toggle_button"
                android:textOn="@string/roughPatch"
                android:textOff="@string/roughPatch"
                android:id="@+id/rough_patch"
                />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>